add swagger doc, fix API /me
